Mutable list of shapes replaced with immutable implementation